<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">puzzle15</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="random_game">Random Game</string>
    <string name="language">Language</string>
    <string name="card_style">Card style</string>
    <string name="game">Game</string>
    <string name="graphics">Graphics</string>
    <string name="sound">Sound</string>
    <string name="image">Image</string>
    <string name="steps">Steps:</string>
    <string name="highscores">Highscores</string>
    <string name="date">Date</string>
    <string name="result">Result</string>


    <string name="steps_to_finish">Steps to finish:</string>
    <string name="custom_game">Custom game</string>
    <string name="start">Start</string>
    <string name="watch_ai">Watch AI play</string>

    <string name="volume">Volume</string>
    <string name="effects">Effects</string>
    <string name="music">Music</string>
    <string name="animation">Animation Speed</string>
    <string name="CardBackground">Card Background</string>
    <string name="ColorTheme">Color Theme</string>
    <string name="Sound">Sound</string>
    <string name="SongsPlaylist">Songs Playlist</string>
    <string name="Effects">Effects</string>
    <string name="Music">Music</string>
    <string name="Reset">Reset</string>
    <string name="MainMenu">Main Menu</string>
    <string name="Apply">Apply</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="logged_out">Logged out.</string>
    <string name="choose_image">Choose image</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_correct">Confirm if selected picture is correct</string>
    <string name="guide">Game guide</string>
    <string name="account">Account</string>


    <array name="languages">
        <item>English</item>
        <item>Lithuanian</item>
    </array>

    <array name="animationSpeed">
        <item>Default</item>
        <item>Slow</item>
        <item>Fast</item>
    </array>

    <array name="cardStyle">
        <item>Numbers</item>
        <item>Letters</item>
        <item>Picture</item>
    </array>


    <array name="colorTheme">
        <item>Green</item>
        <item>Red</item>
        <item>Blue</item>
    </array>

    <array name="cardBackground">
        <item>White color</item>
        <item>Red color</item>
        <item>Blue color</item>
        <item>Green color</item>
    </array>

    <array name="image">
        <item>First</item>
        <item>Second</item>
        <item>Custom</item>
    </array>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="GameGuide">Game Guide</string>
    <string name="AboutPuzzle15">About Puzzle15</string>
    <string name="RandomGame">Random Game</string>
    <string name="CustomGame">Custom Game</string>
    <string name="Account">Account</string>

    <string name="Puzzle15Text">The 15 puzzle (also called Gem Puzzle, Boss Puzzle, Game of Fifteen, Mystic Square and many others) is a sliding puzzle having 15 square tiles numbered 1–15 in a frame that is 4 tiles high and 4 tiles wide, leaving one unoccupied tile position. Tiles in the same row or column of the open position can be moved by sliding them horizontally or vertically, respectively. The goal of the puzzle is to place the tiles in numerical order</string>
    <string name="RandomGameText">Random Game option gives you randomly generated Puzzle 15 game</string>
    <string name="RandomGameText1">After wining game Wining Screen pops up with infomation such as : How much time taken , moves taken and Score</string>
    <string name="CustomGameText1">Custom game option allows you to customize your game: How much steps to finish has to be and card style.</string>
    <string name="CustomGameText2">Card style has 3 options: Numbers - usual puzzle 15 game , Letters - numbers changed to letter and Picture - to put together picture </string>
    <string name="AccountText1">Account option gives you login or register to your account.User which  is log in can see his own highscores
Login Screen:</string>
    <string name="AccountText2">Registration screen:</string>
</resources>